# cepheus

./: .gitignore  CLAUDE.md  Cargo.toml  clippy.toml  rustfmt.toml  styles.css
.codex/: prompts
.githooks/: pre-commit
.specify/memory/: constitution.md
scripts/: setup-dev.sh
specs/001-mvp-terminal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mvp-terminal/checklists/: requirements.md
specs/001-mvp-terminal/contracts/: component-interface.md  tauri-commands.md
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json  test_capacity_bug.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: shell.rs
src-tauri/src/logging/: file_logger.rs  mod.rs
src-tauri/src/models/: command.rs  mod.rs  output.rs
src-tauri/src/state/: history_buffer.rs  mod.rs  shell_manager.rs
src-tauri/tests/: shell_commands.rs
src/components/: command_input.rs  mod.rs  notification_bar.rs  output_display.rs  prompt_indicator.rs  terminal.rs
src/models/: mod.rs  output_line.rs  terminal_state.rs
